# pyrefine

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  LICENSE  README.md  adaptation_driver.html  coverage_report.sh  genindex.html  index.html  objects.inv  post_processing.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_sources/: adaptation_driver.rst.txt  index.rst.txt
_sources/controller/: aoa_sweep.rst.txt  base.rst.txt  monitoring.rst.txt  smooth_transition.rst.txt
_sources/fun3d_simulations/: adjoint.rst.txt  general.rst.txt  time_domain.rst.txt
_sources/refine/: multiscale.rst.txt  uniform_regions.rst.txt
controller/: aoa_sweep.html  base.html  basic.html  monitoring.html  smooth_transition.html
docs/source/: adaptation_driver.rst  conf.py  index.rst  post_processing.rst
examples/flat_plate/: adapt_smooth.py  refine_test_modules.sh
examples/naca64a010/: compute_dimensional_inputs.py  launch_lfd.py  naca64a010_time_domain.py  simulation_naca64a010.py
fun3d_simulations/: adjoint.html  flutter.html  general.html  time_domain.html
fun3d_simulations/distance/: base.html  refine.html  tinf.html
pyrefine/: __init__.py  adaptation_driver.py  component_base.py  directory_utils.py  shell_utils.py
pyrefine/controller/: __init__.py  aoa_sweep.py  base.py  basic.py  monitor_forces.py  monitor_quantity.py  node_ratio.py  smooth_transition.py  trimmed_lfd.py
refine/: aflr3.html  base.html  bootstrap.html  goal_oriented.html  multiscale.html  uniform_regions.html
simulation/: base.html
(+173 files in other folders)
